# scie-md

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  CONTRIBUTOR_LICENSE_AGREEMENT.md  README.md  RELEASE_READINESS_PLAN.md  SECURITY.md  THIRD_PARTY_LICENSES.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
docs/: renderer_oom_risk_audit_v1.md
public/: FONT_LICENSES.md
scie-md-vscode-extension/: .vscodeignore  CHANGELOG.md  MANUAL_SMOKE.md  README.md  package-lock.json  package.json  tsconfig.extension.json  tsconfig.webview.json  vite.config.ts  vitest.config.ts
scripts/: copy-release-exe.mjs  extract-i18n-keys.mjs  inspect-tauri-webview.mjs  manual-ui-sweep.mjs  milkdown-roundtrip.mjs  release-budgets.mjs  release-checksums.mjs  run-python.mjs  stage-vscode-extension.mjs  validate-desktop-pdf-export.mjs  (+16 more)
src/: main.tsx  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: assets.rs  backups.rs  diagnostics.rs  dialogs.rs  export.rs  file_io.rs  file_watcher.rs  inkscape.rs  local_image_protocol.rs  mod.rs  path_grants.rs  path_utils.rs  process.rs  reveal.rs  toml_source_map.rs
src-tauri/src/commands/export/: browser_pdf.rs  native_docx.rs  output_files.rs  temp_artifacts.rs
src-tauri/src/commands/file_io/: text_encoding.rs
src-tauri/tests/: toml_preservation_spike.rs
src-tauri/windows/: nsis-hooks.nsh
(+523 files in other folders)
