[package]
name = "sciemd"
version = "1.0.0"
description = "ScieMD scientific Markdown desktop app"
authors = ["Scienfy Inc."]
license = "AGPL-3.0-or-later"
edition = "2021"

[lib]
name = "sciemd_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"
base64 = "0.22"
blake3 = "1"
libc = "0.2"
notify = "8"
parking_lot = "0.12"
regex = "1"
sha2 = "0.10"
zip = { version = "8", default-features = false, features = ["deflate"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Storage_FileSystem"] }
